--- a/producao_cientifica/templates/producao_cientifica/lista_de_publicacoes.html
+++ b/producao_cientifica/templates/producao_cientifica/lista_de_publicacoes.html
@@ -55,18 +55,17 @@
 <div class="container mt-5">
     <div class="main-container">
         <h2 class="heading">Publicações</h2>
-        
-        <!-- Campo de busca -->
+
         <div id="search-container">
             <input type="text" id="search" class="form-control" placeholder="Procurar publicação...">
         </div>
 
-        <!-- Tabela de publicações -->
         <table id="publicacoesTable" class="table">
             <thead>
                 <tr>
                     <th>ID</th>
                     <th>Título</th>
+                    <th>Data da Defesa</th> <!-- Adicionando coluna de Data da Defesa -->
                     <th>Nome do Curso</th>
                     <th>Autor</th>
                     <th>Nome do Orientador</th>
@@ -78,6 +77,7 @@
                 <tr>
                     <td>{{ item.Id }}</td>
                     <td>{{ item.Titulo }}</td>
+                    <td>{{ item.DataDaDefesa }}</td> <!-- Adicionando dado de Data da Defesa -->
                     <td>{{ item.NomeDoCurso }}</td>
                     <td>{{ item.NomeAutorPrincipal }}</td>
                     <td>{{ item.NomeOrientador }}</td>
@@ -106,11 +106,12 @@
                 tbody.empty();
                 for (let i = 0; i < data.length; i++) {
                     let item = data[i];
-                    tbody.append(`<tr class="table table-striped">
-                        <td>${item.id}</td>  // Django usa minúsculas para nomes de campo
+                    tbody.append(`<tr>
+                        <td>${item.id}</td>
                         <td>${item.titulo}</td>
+                        <td>${item.data_da_defesa}</td> <!-- Exibindo a Data da Defesa -->
                         <td>${item.nome_do_curso}</td>
-                        <td>${item.nome_autor_principal}</td>  // Ajuste de acordo com o seu modelo
+                        <td>${item.nome_autor_principal}</td>
                         <td>${item.nome_orientador}</td>
                         <td><a href="${item.link_arquivo}" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="44" height="44" fill="#FF0000">
